# qt-fun

./: CMakeLists.txt  README.md  alia.hpp  conanfile.txt  main.cpp
alia/: data_graph.hpp
